--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3.10",
 ]
-requires-python = ">=3.10.*"
+requires-python = ">=3.10.0"
 dependencies = [
     "PyYAML"
 ]
